Project description toggle implemented, fixed overflow related issue

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -87,10 +87,6 @@ h3.header {
 .set {
   font-size: 15px;
 }
-.more {
-  display: none;
-}
-
 .info {
   height: auto;
   display: flex;
@@ -111,7 +107,7 @@ h3.header {
 }
 .top_container {
   background-color: #F0EBD8;
-  overflow: hidden;
+  overflow: scroll;
   width: -webkit-fill-available;
   height: -webkit-fill-available;
 }
